# simplipy-api

./: README.md  constants.py  llama_test.py  main.py  pyproject.toml
analysis/: bertscore.py  score.py  score_factory.py
model_services/: custom_llama_service.py  model_service.py  model_service_factory.py  openai_service.py
synonyms/: synonym_service.py  synonym_service_impl.py
utils/: split_sentences.py
